save event button added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:paddingTop="12dp"
         android:paddingEnd="0dp"
         android:paddingBottom="@dimen/common_spacing"
-        tools:context=".MainActivity">
+        tools:context=".activity.MainActivity">
 
 
         <ImageView
