--- a/app/src/main/res/menu/event_actions_menu.xml
+++ b/app/src/main/res/menu/event_actions_menu.xml
@@ -3,4 +3,8 @@
     <item
         android:id="@+id/delete"
         android:title="@string/delete_event" />
+    <item
+        android:id="@+id/edit"
+        android:title="@string/edit_event" />
+
 </menu>
