--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -13,10 +13,19 @@
         <action
             android:id="@+id/action_bottomNavigationFragment_to_newEventFragment"
             app:destination="@id/newEventFragment" />
+        <action
+            android:id="@+id/action_bottomNavigationFragment_to_editEventFragment"
+            app:destination="@id/editEventFragment" />
     </fragment>
     <fragment
         android:id="@+id/newEventFragment"
         android:name="com.eltex.androidschool.fragments.NewEventFragment"
         android:label="@string/new_event_label"
         tools:layout="@layout/fragment_new_event" />
+    <fragment
+        android:id="@+id/editEventFragment"
+        android:name="com.eltex.androidschool.fragments.NewEventFragment"
+        android:label="@string/edit_event_toolbar"
+        tools:layout="@layout/fragment_new_event" />
+
 </navigation>
