--- a/app/src/main/res/layout/card_event_skeleton.xml
+++ b/app/src/main/res/layout/card_event_skeleton.xml
@@ -41,7 +41,7 @@
             app:layout_constraintEnd_toStartOf="@id/menu"
             app:layout_constraintStart_toEndOf="@id/avatar"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Lydia Westervelt" />
+            android:text="@string/default_author" />
 
         <Space
             android:id="@+id/authorOffset"
@@ -59,6 +59,7 @@
             android:foreground="?colorOutlineVariant"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@id/avatar"
+            android:text="@string/default_published_skeleton"
             app:layout_constraintTop_toBottomOf="@id/authorOffset" />
 
         <ImageView
@@ -90,7 +91,7 @@
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/headerBarrier"
-            tools:text="Offline" />
+            android:text="@string/default_eventType_skeleton" />
 
         <TextView
             android:id="@+id/eventDate"
@@ -100,7 +101,7 @@
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/eventType"
-            tools:text="16.05.22 12:00" />
+            android:text="@string/default_event_date_skeleton" />
 
 
         <TextView
@@ -113,6 +114,7 @@
             android:letterSpacing="0.02"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/default_content_skeleton"
             app:layout_constraintTop_toBottomOf="@id/eventDate" />
 
         <TextView
@@ -126,7 +128,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/content"
-            tools:text="https://m2.material.io/components/cards" />
+            android:text="@string/default_link_skeleton" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/like"
@@ -139,7 +141,7 @@
             app:icon="@drawable/baseline_favorite_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/eventLink"
-            tools:text="10" />
+            android:text="@string/default_likes_amount_skeleton" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/share"
@@ -166,6 +168,6 @@
             app:icon="@drawable/people"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/eventLink"
-            tools:text="10" />
+            android:text="@string/default_participants_amount_skeleton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
