--- a/app/src/main/res/layout/card_event.xml
+++ b/app/src/main/res/layout/card_event.xml
@@ -8,7 +8,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingStart="@dimen/common_spacing"
         android:paddingTop="12dp"
         android:paddingEnd="0dp"
         android:paddingBottom="@dimen/common_spacing"
@@ -16,6 +15,7 @@
 
 
         <ImageView
+            android:layout_marginStart="@dimen/common_spacing"
             android:id="@+id/avatar"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -89,18 +89,33 @@
             app:barrierMargin="12dp"
             app:constraint_referenced_ids="avatar, published, menu" />
 
+        <ImageView
+            android:id="@+id/attachment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/headerBarrier"
+            tools:srcCompat="@tools:sample/avatars"
+            tools:visibility="visible" />
+
         <TextView
             android:id="@+id/eventType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_spacing"
+            android:layout_marginStart="@dimen/common_spacing"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/headerBarrier"
+            app:layout_constraintTop_toBottomOf="@id/attachment"
             tools:text="Offline" />
 
         <TextView
             android:id="@+id/eventDate"
+            android:layout_marginStart="@dimen/common_spacing"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
@@ -116,6 +131,7 @@
             android:layout_marginTop="@dimen/big_spacing"
             android:layout_marginEnd="@dimen/common_spacing"
             android:letterSpacing="0.02"
+            android:layout_marginStart="@dimen/common_spacing"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/eventDate"
@@ -128,12 +144,14 @@
             android:layout_marginTop="@dimen/big_spacing"
             android:layout_marginEnd="@dimen/common_spacing"
             android:autoLink="web"
+            android:layout_marginStart="@dimen/common_spacing"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/content"
             tools:text="https://m2.material.io/components/cards" />
 
         <com.google.android.material.button.MaterialButton
+            android:layout_marginStart="@dimen/common_spacing"
             android:id="@+id/like"
             style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="wrap_content"
